--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
     	<div id="content" class="w3-container">
-        <p>Are your eyes watery or itchy?</p>    
+        <p>Are your eyes watery or itchy?</p>
+	<a href="#one" class="w3-btn w3-pink w3-round"> yes </a>
+	<a href="#one" class="w3-btn w3-pink w3-round"> no </a>
     	</div>
 </div>
 
