--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p>
-	<a href="#one" class="w3-btn w3-pink w3-round"> yes </a>
-	<a href="#one" class="w3-btn w3-pink w3-round"> no </a>
+	<a href="#two" class="w3-btn w3-pink w3-round"> yes </a>
+	<a href="#two" class="w3-btn w3-pink w3-round"> no </a>
     	</div>
 </div>
 
@@ -108,7 +108,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>Content of page 2 goes here.</p>
+		<p>Do you have a fever?</p>
+		<a href="#two" class="w3-btn w3-pink w3-square"> yes </a>
+		<a href="#two" class="w3-btn w3-pink w3-heart"> no </a>
 	</div>
 </div>	
 
