--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<a href="#two" class="w3-btn w3-pink w3-round"> no </a>
     	</div>
 </div>
+	
 
 <div class="page" id="two">
 	<div class="w3-container w3-flat-carrot">
@@ -109,11 +110,24 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>
-		<a href="#two" class="w3-btn w3-pink w3-square"> yes </a>
-		<a href="#two" class="w3-btn w3-pink w3-heart"> no </a>
+		<a href="#two" class="w3-btn w3-pink w3-round"> yes </a>
+		<a href="#two" class="w3-btn w3-pink w3-round"> no </a>
 	</div>
+	
+	
 </div>	
 
+	<div class="page" id="three">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 2</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+		<p>Do you have a fever?</p>
+		<a href="#two" class="w3-btn w3-pink w3-round"> yes </a>
+		<a href="#two" class="w3-btn w3-pink w3-round"> no </a>
+	</div>
+</div>
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
 </footer>
