--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>
-		<a href="#two" class="w3-btn w3-pink w3-round"> yes </a>
-		<a href="#two" class="w3-btn w3-pink w3-round"> no </a>
+		<a href="#three" class="w3-btn w3-pink w3-round"> yes </a>
+		<a href="#three" class="w3-btn w3-pink w3-round"> no </a>
 	</div>
 	
 	
@@ -123,9 +123,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>Do you have a fever?</p>
-		<a href="#two" class="w3-btn w3-pink w3-round"> yes </a>
-		<a href="#two" class="w3-btn w3-pink w3-round"> no </a>
+		<p>Do you have a sore throat?</p>
+		<a href="#four" class="w3-btn w3-pink w3-round"> yes </a>
+		<a href="#four" class="w3-btn w3-pink w3-round"> no </a>
 	</div>
 </div>
 <footer class="w3-bottom w3-container w3-flat-carrot">
