--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
   </script>
 
 
-
+<!-- The code in the style sets the style of the page -->
 <style>	
-.body {
-     margin: 0em;
+.body { 
+     margin: 0em; 
 }
 
 .page {
@@ -78,9 +78,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 }
 </style>
 
-<body>
-<div id="header" class="w3-container w3-flat-carrot">
-	<h1>Cold or Allergies?</h1>
+<!-- The code in body creates the words on the pages. -->
+<body> 
+<div id="header" class="w3-container w3-flat-carrot"> <!-- Here, it prints words in the header -->
+	<h1>Cold or Allergies?</h1> <!-- The words are "Cold or Allergies" -->
 </div>
 	
 <div id="content" class="w3-container">
@@ -121,7 +122,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	<div class="page" id="three">
 	<div class="w3-container w3-flat-carrot">
-		<h1>Question 2</h1>
+		<h1>Question 3</h1>
 	</div>
 	
 	<div id="content" class="w3-container">
@@ -129,7 +130,23 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<a href="#four" class="w3-btn w3-pink w3-round"> yes </a>
 		<a href="#four" class="w3-btn w3-pink w3-round"> no </a>
 	</div>
-</div>
+		
+		
+</div>	
+
+	<div class="page" id="four">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 4</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+		<p>Are your symptoms seaonal or chronic?</p>
+		<a href="#five" class="w3-btn w3-pink w3-round"> yes </a>
+		<a href="#five" class="w3-btn w3-pink w3-round"> no </a>
+	</div>
+		
+		
+</div>	
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
 </footer>
