--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p>
-	<a href="#two" class="w3-btn w3-pink w3-round"> yes </a>
-	<a href="#two" class="w3-btn w3-pink w3-round"> no </a>
+	<a href="#two" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> yes </a>
+	<a href="#two" onclick="coldAdd();" class="w3-btn w3-pink w3-round"> no </a>
     	</div>
 </div>
 	
@@ -113,8 +113,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>
-		<a href="#three" class="w3-btn w3-pink w3-round"> yes </a>
-		<a href="#three" class="w3-btn w3-pink w3-round"> no </a>
+		<a href="#three" onclick="coldAdd();" class="w3-btn w3-pink w3-round"> yes </a>
+		<a href="#three" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> no </a>
 	</div>
 	
 	
@@ -127,8 +127,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a sore throat?</p>
-		<a href="#four" class="w3-btn w3-pink w3-round"> yes </a>
-		<a href="#four" class="w3-btn w3-pink w3-round"> no </a>
+		<a href="#four" onclick="coldAdd();" class="w3-btn w3-pink w3-round"> yes </a>
+		<a href="#four" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> no </a>
 	</div>
 		
 		
@@ -141,8 +141,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Are your symptoms seaonal or chronic?</p>
-		<a href="#five" class="w3-btn w3-pink w3-round"> yes </a>
-		<a href="#five" class="w3-btn w3-pink w3-round"> no </a>
+		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> yes </a>
+		<a href="#five" onclick="coldAdd();" class="w3-btn w3-pink w3-round"> no </a>
 	</div>
 		
 		
