--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
             cold_count = cold_count + 1;
         }
 
-	var resultText = document.getElementById("results");
-	resultText.innerHTML = "Probability it is allergies =" + allergyPercent + 
-		               "Probability it is a cold =" + coldPercent;
+	var resultText = document.getElementById("resultText").innerHTML = "Probability it is allergies =" + allergyPercent + 
+		                                                           "Probability it is a cold =" + coldPercent;
+	 
   </script>
 
 
@@ -170,7 +170,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;</p>
+		<p>uhhhhhhh</p>
 	</div>
 		
 		
