--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
         function allergyAdd(){ <!-- When called, this function increments allergy_count by one -->
             allergy_count = allergy_count + 1;
-		alert(allergy_count);
 
         }
 
@@ -52,8 +51,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
             cold_count = cold_count + 1;
         }
 
-	var resultText = document.getElementById("resultText").innerHTML = "Probability it is allergies =" + allergyPercent + 
-		                                                           "Probability it is a cold =" + coldPercent;
+	var resultText = document.getElementById("resultText").innerHTML = "Probability it is allergies =" + allergyPercent + "Probability it is a cold =" + coldPercent;
 	 
   </script>
 
