--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
             cold_count = cold_count + 1;
         }
 
-	var resultText = document.getElementById("resultText").innerHTML = "Probability it is allergies =" + allergyPercent + "Probability it is a cold =" + coldPercent;
+	var resultText = document.getElementById("resultText").innerHTML = "Probability it is allergies =" + allergyPercent + "
+	                                                                   "Probability it is a cold =" + coldPercent;
 	 
   </script>
 
@@ -168,7 +169,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>id="results"></p>
+		<h1>"The value for number is: " <span id="Results"></span></h1
+	
 	</div>
 		
 		
