--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<body onload="var">
-		<h1>"The value for number is: " <span id="Results"></span></h1
+		<h1>"Results: " <span id="Results"></span></h1
 	
 	</div>
 		
