--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         function coldAdd(){ <!-- When called, this function increments cold_count by one -->
             cold_count = cold_count + 1;
         }
-
+        function myFunction(){
 	var resultText = document.getElementById("results")
 	    resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "Probability it is a cold =" + coldPercent; 
+	}
   </script>
 
 
@@ -168,8 +169,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<body onload="var">
-		<h1>"Results: " <span id="results"></span></h1
+		<body onload="myFunction()">
+		<h1>"Results: " <span id="results"></span></h1>
 	
 	</div>
 		
