--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         function displayresults(){
 	var resultText = document.getElementById("results")
 	    resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "Probability it is a cold =" + coldPercent; 
+	alert(resultText);
 	}
+	
   </script>
 
 
