--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
             cold_count = cold_count + 1;
         }
 	
-	var resultText = document.getElementById("results").innerHTML = "Probability it is allergies =" + allergyPercent + "Probability it is a cold =" + coldPercent; 
+	var resultText = document.getElementById("results"); 
+	resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;
 	
 	}
 	
@@ -170,7 +171,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>results: <span id="results"></span></p>
+		<p>results: <id="results"></p>
 	</div>
 		
 		
