--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	function results(){
 		var resultText = document.getElementById("results"); 
-		allergyPercent = allergy_count/(allergy_count + cold_count)
-		coldPercent = cold_count/(allergy_count + cold_count)
+		allergyPercent = (allergy_count/(allergy_count + cold_count))*100
+		coldPercent = (cold_count/(allergy_count + cold_count))*100
 	}
 	
   </script>
@@ -172,7 +172,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>results: <id=resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent;></p>
+		<p>results: <id=resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; ></p>
 	</div>
 		
 		
