--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		var resultText = document.getElementById("results"); 
+		<script>
+			var resultText = document.getElementById("results"); 
+		<script>
 		<p id="results">resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; </p>
 	</div>
 		
