--- a/index.html
+++ b/index.html
@@ -176,13 +176,14 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p id="results">resultText</p>
-	
-	</div>
-	
-	<script>
-         document.getElementById("results").innerHTML = allergyPercent 		
-	</script>
+		
+		<p id="last">Hello World!</p>
+
+      <script>
+      document.getElementById("last").innerHTML = "New text!";
+      </script>
+		
+		
 		
 </div>
 		
