--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>
-		<a href="#three" onclick="coldAdd();" class="w3-btn w3-pink w3-round"> yes </a>
-		<a href="#three" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> no </a>
+		<a href="#three" onclick="coldAdd();" class="w3-btn w3-pink w3-heart"> yes </a>
+		<a href="#three" onclick="allergyAdd();" class="w3-btn w3-pink w3-heart"> no </a>
 	</div>
 	
 	
@@ -136,8 +136,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a sore throat?</p>
-		<a href="#four" onclick="coldAdd();" class="w3-btn w3-pink w3-round"> yes </a>
-		<a href="#four" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> no </a>
+		<a href="#four" onclick="coldAdd();" class="w3-btn w3-teal w3-round"> yes </a>
+		<a href="#four" onclick="allergyAdd();" class="w3-btn w3-rose w3-round"> no </a>
 	</div>
 		
 		
@@ -150,8 +150,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Are your symptoms seaonal or chronic?</p>
-		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> yes </a>
-		<a href="#five" onclick="coldAdd();" class="w3-btn w3-pink w3-round"> no </a>
+		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-purple w3-round"> yes </a>
+		<a href="#five" onclick="coldAdd();" class="w3-btn w3-yellow w3-round"> no </a>
 	</div>
 	
 		
@@ -164,7 +164,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Click for Results!</p>
-		<a href="#results" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> RESULTS </a>
+		<a href="#results" onclick="allergyAdd();" class="w3-btn w3-lightBlue w3-round"> RESULTS </a>
 	</div>
 		
 		
