--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	function results(){
          allergyPercent = (allergy_count)/(allergy_count + cold_count)*100
+	 coldPercent = (cold_count)/(allergy_count + cold_count)*100
          var resultText = document.getElementById("results");
     
 		
