--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a fever?</p>
-		<a href="#three" onclick="coldAdd();" class="w3-btn w3-pink w3-heart"> yes </a>
-		<a href="#three" onclick="allergyAdd();" class="w3-btn w3-pink w3-heart"> no </a>
+		<a href="#three" onclick="coldAdd();" class="w3-btn w3-teal w3-round"> yes </a>
+		<a href="#three" onclick="allergyAdd();" class="w3-btn w3-teal w3-round"> no </a>
 	</div>
 	
 	
@@ -139,8 +139,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a sore throat?</p>
-		<a href="#four" onclick="coldAdd();" class="w3-btn w3-teal w3-round"> yes </a>
-		<a href="#four" onclick="allergyAdd();" class="w3-btn w3-rose w3-round"> no </a>
+		<a href="#four" onclick="coldAdd();" class="w3-btn w3-pink w3-round"> yes </a>
+		<a href="#four" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> no </a>
 	</div>
 		
 		
@@ -153,8 +153,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 		<p>Are your symptoms seaonal or chronic?</p>
-		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-purple w3-round"> yes </a>
-		<a href="#five" onclick="coldAdd();" class="w3-btn w3-yellow w3-round"> no </a>
+		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-teal w3-round"> yes </a>
+		<a href="#five" onclick="coldAdd();" class="w3-btn w3-teal w3-round"> no </a>
 	</div>
 	
 		
@@ -166,8 +166,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>Click for Results!</p>
-		<a href="#results" onclick="allergyAdd();" class="w3-btn w3-lightBlue w3-round"> RESULTS </a>
+		<a href="#results" onclick="allergyAdd();" class="w3-btn w3-pink w3-round"> Click for Results! :) </a>
 	</div>
 		
 		
