--- a/index.html
+++ b/index.html
@@ -105,10 +105,17 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 
+	
+	<!-- This code is for the header on page one of the website.-->
+	
 <div class="page" id="one">
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Question 1</h1>
 	</div>
+	
+	<!-- For this next part below, I added question one on page one and changed the button colors to pink. Later, after making all of the pages 
+             I added the onclick function to direct you to the next page when the button is pressed. I put #two because the id for the second page is 
+             "two" so it will take you to that specific page.--->
 	
     	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p>
