--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container"> <!-- The code below is for the main content on the last page -->
 		
-		<p id="results">Results</p> <!-- This code is like the placeholder for the content on the last page where the percentages will be displayed. -->
+		<p id="results"></p> <!-- This code is like the placeholder for the content on the last page where the percentages will be displayed. -->
 
       
 </div>
