--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>
 	
 <div id="content" class="w3-container"> <!-- This prints the main content on the page before the quiz starts  -->
-	<p>Are you feeling like you might have a cold but wonder if it is allergies. Answer a few short questions to find out!</p> <!-- These are the words that will show up on the page -->
+	<p>Are you feeling like you might have a cold but wondering if it is just allergies? Answer a few short questions to find out!</p> <!-- These are the words that will show up on the page -->
 	
 	<a href="#one" class="w3-btn w3-pink w3-round"> Get Started </a> <!-- This is the button to take the user to page one of the quiz. I changed the color to pink and the shape to round. On the button it says Get Started. -->
 	
@@ -159,7 +159,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container"> <!-- The code below is for the main content on page four -->
-		<p>Are your symptoms seaonal or chronic?</p> <!-- On the fourth page under the header, these words will be diplayed. -->
+		<p>Are your symptoms seasonal or chronic?</p> <!-- On the fourth page under the header, these words will be diplayed. -->
 		<a href="#five" onclick="allergyAdd();" class="w3-btn w3-teal w3-round"> yes </a> <!-- This code makes a button that is teal and round and has the word "yes" on it. When pressed, it will call the allergy_add function and take the user to the page with id="five" -->
 		<a href="#five" onclick="coldAdd();" class="w3-btn w3-teal w3-round"> no </a> <!-- This code makes a button that is teal and round and has the word "no" on it. When pressed, it will call the cold_add function and take the user to the page with id="five" -->
 	</div>
